-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: infrastructure
-
b131
-
x86_64, sparc_64
-
solaris, solaris_11, solaris_12
-
Verified
The following files in the hotspot source define the __USE_LEGACY_PROTOTYPES__ macro when it isn't required:
src/os/solaris/vm/jvm_solaris.h
src/share/vm/utilities/globalDefinitions_sparcWorks.hpp
hotspot/src/closed/os/solaris/vm/os_perf_solaris.cpp
In addition "__" macros are usually private to the system headers and may change at any time. The use of __USE_LEGACY_PROTOTYPES__ should therefore be removed.
src/os/solaris/vm/jvm_solaris.h
src/share/vm/utilities/globalDefinitions_sparcWorks.hpp
hotspot/src/closed/os/solaris/vm/os_perf_solaris.cpp
In addition "__" macros are usually private to the system headers and may change at any time. The use of __USE_LEGACY_PROTOTYPES__ should therefore be removed.