8161601: Solaris: __USE_LEGACY_PROTOTYPES__ is redundant and should be removed

Reviewed-by: redestad, dcubed, gthornbr, dholmes